# cellular

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_std.sh
.github/workflows/: makefile.yml
examples/: CMakeLists.txt  EmptyLayer.cpp  LangtonsAnt.cpp  ParticlesLayer.cpp  nothing  particles
src/: Application.mpp  Cellular.hpp  Layer.mpp  buildfile  main.cpp
src/Core/: Application.cpp  Application.hpp  Application.ipp  Application.mpp  Layer.cpp  Layer.hpp  Layer.mpp  Resource.cpp  Resource.hpp  main.cpp
src/Scene/: Component.hpp  Entity.hpp  Scene.cpp  Scene.hpp  System.hpp
src/Threads/: Job.cpp  Job.h  Job.hpp  JobQueue.cpp  JobQueue.h  JobQueue.hpp  ThreadPool.cpp  ThreadPool.hpp
src/Utils/: Defines.hpp  Frequency.hpp  Grid.hpp  Grid.inl  Math.h  Math.hpp  Random.cpp  Random.h  Random.hpp
test/: CMakeLists.txt  cellular_tests  exampletest.cpp
test/Threads/: JobQueueTest.cpp  JobTest.cpp  ThreadPoolTest.cpp
test/Utils/: GridTest.hpp
